# video-maker-workflow

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/architecture/: project-technical-introduction.md  video-workflow-service.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
tests/: test_context_assembler.py  test_doubao_provider.py  test_ffmpeg_pipeline.py  test_first_frame_prepare.py  test_http_server.py  test_language_detect.py  test_llm_workflow.py  test_scene_character_cast.py  test_scene_prompt_render.py  test_subtitle_clients.py  test_workflow_service.py
video_workflow_service/: __init__.py  cli.py
video_workflow_service/api/: http_server.py
video_workflow_service/application/: workflow_service.py
video_workflow_service/domain/: models.py
video_workflow_service/infrastructure/: config.py
video_workflow_service/llm/: __init__.py  base.py  deepseek.py  doubao_ark.py  factory.py  mock.py  model_registry.py  provider_registry.py
video_workflow_service/media/: ffmpeg_pipeline.py
video_workflow_service/providers/: __init__.py  base.py  content_model.py  doubao.py  factory.py  mock.py
video_workflow_service/storage/: project_repository.py
video_workflow_service/subtitles/: __init__.py  formats.py  service.py  volcengine_asr.py  volcengine_speech.py
video_workflow_service/workflow/: __init__.py  character_anchor.py  context_assembler.py  context_types.py  contracts.py  dialogue_allocate.py  first_frame_analyze.py  first_frame_prepare.py  llm_node.py  (+11 more)
(+9 files in other folders)
